overflow trying to fix

--- a/css/footer.css
+++ b/css/footer.css
@@ -10,7 +10,7 @@
     align-items: center;
 }
 
-.content h3 {
+.copyright-text {
     margin-top: 20px;
     margin-bottom: 5px;
     font-size: 3rem;
